fix: hide scrollbar for layout shift when using the theme selector

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -372,3 +372,17 @@ body {
     --primary-foreground: var(--color-amber-50);
   }
 }
+
+/**
+ * Hide scrollbar for layout shift when using the theme selector
+ */
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
